# sandspy

./: .gitignore  AGENT_HANDOFF.md  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING_PROFILES.md  Cargo.toml  LICENSE  README.md  build_out.txt  clippy_out.txt  deny.toml  secrets_test.env
.github/workflows/: ci.yml  release.yml
docs/: PROFILES.md
profiles/: aider.toml  antigravity.toml  claude-code.toml  cline.toml  codex-cli.toml  continue.toml  cursor.toml  gemini-cli.toml  generic.toml  openclaw.toml  windsurf.toml
signatures/: expected_apis.toml  suspicious_patterns.toml  trackers.toml
src/: alerts.rs  config.rs  daemon.rs  demo.rs  events.rs  history.rs  interactive.rs  lib.rs  main.rs
src/analysis/: diff.rs  mod.rs  profiler.rs  resolver.rs  risk.rs  secrets.rs
src/monitor/: clipboard.rs  command.rs  environment.rs  filesystem.rs  memory.rs  mod.rs  network.rs  process.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/report/: html.rs  json.rs  mod.rs
src/ui/: alerts_panel.rs  app.rs  dashboard.rs  diff_viewer.rs  files_panel.rs  live.rs  mod.rs  network_panel.rs  summary.rs  summary_panel.rs  theme.rs
tests/: events_step_1_2.rs  integration_test.rs
tests/integration/: mod.rs
