[package]
name = "sandspy"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Real-time security monitor for AI coding agents"
license = "MIT"
repository = "https://github.com/user/sandspy"
keywords = ["security", "ai", "agent", "monitor", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Monitoring
sysinfo = "0.38"
notify = "8"
netstat2 = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "6"
similar = "2"
rand = "0.8"
glob = "0.3"
dns-lookup = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal output
colored = "2"
crossterm = "0.29"
ratatui = "0.30"

# Notifications
notify-rust = "4"

# Clipboard (best-effort)
arboard = "3"

# Network resolution (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["network-resolve"]
network-resolve = ["reqwest"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp"
] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[target.'cfg(unix)'.dependencies]
daemonize2 = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
